--- a/public/appData.json
+++ b/public/appData.json
@@ -4,7 +4,7 @@
     "title": "Instagram",
     "companyName": "Meta Platforms",
     "id": 1,
-    "description": "Share photos and videos with friends and followers",
+    "description": "Share photos and videos with friends and followers. Connect with people globally. Explore trending content and creative reels. Discover new ideas and interests. Stay updated with your favorite creators.",
     "size": 156,
     "reviews": 125000000,
     "ratingAvg": 4.5,
@@ -22,7 +22,7 @@
     "title": "WhatsApp Messenger",
     "companyName": "Meta Platforms",
     "id": 2,
-    "description": "Simple. Secure. Reliable messaging and calling",
+    "description": "Simple. Secure. Reliable messaging and calling. Enjoy end-to-end encrypted chats with family. Group video calls for seamless connection. Share status updates and moments. Use it for business and personal communication.",
     "size": 89,
     "reviews": 180000000,
     "ratingAvg": 4.3,
@@ -40,7 +40,7 @@
     "title": "TikTok",
     "companyName": "ByteDance",
     "id": 3,
-    "description": "Create and share short entertaining videos",
+    "description": "Create and share short entertaining videos. Discover personalized content feeds just for you. Use trending sounds and effects for creative expression. Participate in challenges and engage with the community. Go live and connect directly with your audience.",
     "size": 178,
     "reviews": 95000000,
     "ratingAvg": 4.6,
@@ -58,7 +58,7 @@
     "title": "Spotify",
     "companyName": "Spotify AB",
     "id": 4,
-    "description": "Music and podcasts streaming service",
+    "description": "Music and podcasts streaming service. Discover millions of songs and curated playlists. Listen offline with premium access. Explore podcasts on any topic. Get personalized recommendations based on your taste.",
     "size": 124,
     "reviews": 72000000,
     "ratingAvg": 4.4,
@@ -76,7 +76,7 @@
     "title": "YouTube",
     "companyName": "Google LLC",
     "id": 5,
-    "description": "Watch, upload and share videos",
+    "description": "Watch, upload and share videos. Subscribe to your favorite channels and creators. Explore diverse content from tutorials to entertainment. Enjoy music videos and original series. Comment, like, and engage with the global community.",
     "size": 145,
     "reviews": 220000000,
     "ratingAvg": 4.2,
@@ -94,7 +94,7 @@
     "title": "Netflix",
     "companyName": "Netflix Inc",
     "id": 6,
-    "description": "Watch TV shows and movies anytime, anywhere",
+    "description": "Watch TV shows and movies anytime, anywhere. Stream exclusive original series and films. Download content to watch offline on the go. Get personalized suggestions based on your viewing history. Create profiles for family and friends.",
     "size": 198,
     "reviews": 58000000,
     "ratingAvg": 4.5,
@@ -112,7 +112,7 @@
     "title": "Facebook",
     "companyName": "Meta Platforms",
     "id": 7,
-    "description": "Connect with friends and the world around you",
+    "description": "Connect with friends and the world around you. Share status updates, photos, and life events. Join local groups and communities. Follow pages of interest and news outlets. Use Marketplace to buy and sell items locally.",
     "size": 168,
     "reviews": 145000000,
     "ratingAvg": 3.9,
@@ -130,7 +130,7 @@
     "title": "Amazon Shopping",
     "companyName": "Amazon Mobile LLC",
     "id": 8,
-    "description": "Shop millions of products and deals",
+    "description": "Shop millions of products and deals. Track your orders easily from shipment to delivery. Read customer reviews before making a purchase. Use voice search for quick shopping. Secure payment and returns process.",
     "size": 142,
     "reviews": 48000000,
     "ratingAvg": 4.6,
@@ -148,7 +148,7 @@
     "title": "Uber",
     "companyName": "Uber Technologies",
     "id": 9,
-    "description": "Request a ride and get picked up by a nearby driver",
+    "description": "Request a ride and get picked up by a nearby driver. View your estimated arrival time and route. Pay securely through the app using various methods. Share your trip status with loved ones for safety. Book rides for immediate or scheduled travel.",
     "size": 186,
     "reviews": 35000000,
     "ratingAvg": 4.1,
@@ -166,7 +166,7 @@
     "title": "Snapchat",
     "companyName": "Snap Inc",
     "id": 10,
-    "description": "Share moments with friends through photos and videos",
+    "description": "Share moments with friends through photos and videos. Use fun filters and augmented reality lenses. Chat instantly and see when friends are typing. View stories from friends and official publishers. Keep your best memories in your private 'Memories'.",
     "size": 167,
     "reviews": 82000000,
     "ratingAvg": 4.3,
@@ -184,7 +184,7 @@
     "title": "Gmail",
     "companyName": "Google LLC",
     "id": 11,
-    "description": "Fast, organized email by Google",
+    "description": "Fast, organized email by Google. Get smart categorization of your inbox (Primary, Social, Promotions). Enjoy powerful spam filtering to keep your inbox clean. Search through your archives instantly. Access all your Google services in one place.",
     "size": 97,
     "reviews": 92000000,
     "ratingAvg": 4.4,
@@ -202,7 +202,7 @@
     "title": "Twitter (X)",
     "companyName": "X Corp",
     "id": 12,
-    "description": "Stay connected to what matters most",
+    "description": "Stay connected to what matters most. See real-time news and trending topics. Join conversations and share your thoughts in short posts. Follow influential figures and diverse communities. Engage with media and live events worldwide.",
     "size": 134,
     "reviews": 67000000,
     "ratingAvg": 3.8,
@@ -220,7 +220,7 @@
     "title": "Telegram",
     "companyName": "Telegram FZ-LLC",
     "id": 13,
-    "description": "Pure instant messaging — simple, fast, secure",
+    "description": "Pure instant messaging — simple, fast, secure. Chat with friends or large groups and channels. Send large files and documents without limit. Secret chats with self-destructing messages for privacy. Syncs seamlessly across all your devices.",
     "size": 78,
     "reviews": 54000000,
     "ratingAvg": 4.7,
@@ -238,7 +238,7 @@
     "title": "Google Maps",
     "companyName": "Google LLC",
     "id": 14,
-    "description": "Real-time GPS navigation and traffic",
+    "description": "Real-time GPS navigation and traffic. Find the fastest routes for driving, walking, or public transit. Discover local businesses, restaurants, and points of interest. View street imagery and detailed indoor maps. Save locations for quick access and offline use.",
     "size": 112,
     "reviews": 98000000,
     "ratingAvg": 4.4,
@@ -256,7 +256,7 @@
     "title": "Zoom",
     "companyName": "Zoom Video Communications",
     "id": 15,
-    "description": "Video conferencing and cloud meetings",
+    "description": "Video conferencing and cloud meetings. Host or join high-quality video and audio calls. Share your screen for presentations and collaboration. Use virtual backgrounds for privacy. Connect securely with anyone, anywhere in the world.",
     "size": 145,
     "reviews": 43000000,
     "ratingAvg": 4.4,
@@ -274,7 +274,7 @@
     "title": "Discord",
     "companyName": "Discord Inc",
     "id": 16,
-    "description": "Talk, chat, hang out with communities",
+    "description": "Talk, chat, hang out with communities. Create custom servers for your friends or interests. Use voice channels to talk in real-time while gaming. Share screens, media, and files easily. Connect with fellow fans, artists, or classmates.",
     "size": 156,
     "reviews": 38000000,
     "ratingAvg": 4.5,
@@ -292,7 +292,7 @@
     "title": "LinkedIn",
     "companyName": "LinkedIn Corporation",
     "id": 17,
-    "description": "Professional networking and job search",
+    "description": "Professional networking and job search. Build your career profile and expand your network. Find and apply for jobs with tailored recommendations. Read industry news and insightful articles. Connect with colleagues and mentors.",
     "size": 132,
     "reviews": 52000000,
     "ratingAvg": 4.3,
@@ -310,7 +310,7 @@
     "title": "Canva",
     "companyName": "Canva Pty Ltd",
     "id": 18,
-    "description": "Design graphics, videos and documents",
+    "description": "Design graphics, videos and documents. Create professional-looking flyers, posts, and presentations. Use thousands of ready-made templates. Collaborate on designs with your team in real-time. Edit photos and videos with simple tools.",
     "size": 189,
     "reviews": 28000000,
     "ratingAvg": 4.7,
@@ -328,7 +328,7 @@
     "title": "Shazam",
     "companyName": "Apple Inc",
     "id": 19,
-    "description": "Identify songs in seconds",
+    "description": "Identify songs in seconds. Discover the artist, album, and lyrics instantly. Save your discovered songs to your history. Connect to Spotify or Apple Music to listen fully. Find out what music is trending globally.",
     "size": 87,
     "reviews": 32000000,
     "ratingAvg": 4.6,
@@ -346,7 +346,7 @@
     "title": "Duolingo",
     "companyName": "Duolingo",
     "id": 20,
-    "description": "Learn languages for free",
+    "description": "Learn languages for free. Fun, bite-sized lessons to build fluency fast. Practice speaking, reading, listening, and writing skills. Track your progress with daily goals and streaks. Over 40 languages available for learning.",
     "size": 124,
     "reviews": 42000000,
     "ratingAvg": 4.6,
@@ -364,7 +364,7 @@
     "title": "Notion",
     "companyName": "Notion Labs Inc",
     "id": 21,
-    "description": "Notes, docs, tasks and wikis in one place",
+    "description": "Notes, docs, tasks and wikis in one place. Organize your life and work with flexible tools. Create custom databases and project management systems. Collaborate with teams on shared workspaces. Write documents and embed media easily.",
     "size": 156,
     "reviews": 18000000,
     "ratingAvg": 4.5,
@@ -382,7 +382,7 @@
     "title": "Adobe Photoshop Express",
     "companyName": "Adobe Inc",
     "id": 22,
-    "description": "Photo editor and collage maker",
+    "description": "Photo editor and collage maker. Quickly edit photos with professional filters and effects. Create stunning collages with various layouts. Remove blemishes and correct color balance easily. Share your creations directly to social media.",
     "size": 178,
     "reviews": 24000000,
     "ratingAvg": 4.4,
@@ -400,7 +400,7 @@
     "title": "Fitbit",
     "companyName": "Google LLC",
     "id": 23,
-    "description": "Health and fitness tracking",
+    "description": "Health and fitness tracking. Monitor your daily steps, distance, and calories burned. Track your sleep patterns and get insightful scores. Log your workouts and set personal goals. Connect with friends for motivation and challenges.",
     "size": 143,
     "reviews": 26000000,
     "ratingAvg": 4.2,
@@ -418,7 +418,7 @@
     "title": "PayPal",
     "companyName": "PayPal Mobile",
     "id": 24,
-    "description": "Send and receive money securely",
+    "description": "Send and receive money securely. Link your bank accounts and cards easily. Shop online without sharing your financial details. Pay friends and family instantly with zero fees. Track your transaction history in one place.",
     "size": 134,
     "reviews": 45000000,
     "ratingAvg": 4.5,
@@ -436,7 +436,7 @@
     "title": "Headspace",
     "companyName": "Headspace Inc",
     "id": 25,
-    "description": "Meditation and sleep made simple",
+    "description": "Meditation and sleep made simple. Guided meditations for stress, sleep, and focus. Mini-meditations for quick mental resets. Access sleep sounds and wind-down exercises. Learn mindfulness techniques for daily life.",
     "size": 165,
     "reviews": 19000000,
     "ratingAvg": 4.5,
@@ -454,7 +454,7 @@
     "title": "Reddit",
     "companyName": "Reddit Inc",
     "id": 26,
-    "description": "Dive into anything and join communities",
+    "description": "Dive into anything and join communities. Discover millions of topics from news to niche hobbies. Upvote or downvote content to curate your feed. Participate in discussions and ask questions. Follow your favorite subreddits for constant updates.",
     "size": 148,
     "reviews": 36000000,
     "ratingAvg": 4.3,
@@ -472,7 +472,7 @@
     "title": "Pinterest",
     "companyName": "Pinterest Inc",
     "id": 27,
-    "description": "Discover recipes, home ideas, style inspiration",
+    "description": "Discover recipes, home ideas, style inspiration. Save and organize your favorite pins into boards. Shop products directly from inspiring images. Explore millions of visual ideas and creative concepts. Follow creators and topics that match your style.",
     "size": 139,
     "reviews": 51000000,
     "ratingAvg": 4.5,
@@ -490,7 +490,7 @@
     "title": "Twitch",
     "companyName": "Twitch Interactive Inc",
     "id": 28,
-    "description": "Watch live streams of games, esports and more",
+    "description": "Watch live streams of games, esports and more. Interact with streamers and other viewers in real-time chat. Subscribe to your favorite channels for exclusive perks. Follow top esports competitions and events. Discover new games and creative content.",
     "size": 167,
     "reviews": 29000000,
     "ratingAvg": 4.4,
