update image url

--- a/public/appData.json
+++ b/public/appData.json
@@ -36,7 +36,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/en/thumb/a/a9/TikTok_logo.svg/512px-TikTok_logo.svg.png",
+    "image": "https://img.freepik.com/premium-photo/tiktok-logo_1080029-103.jpg?semt=ais_hybrid&w=740&q=80",
     "title": "TikTok",
     "companyName": "ByteDance",
     "id": 3,
@@ -90,7 +90,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/512px-Netflix_2015_logo.svg.png",
+    "image": "https://i.pinimg.com/736x/9e/a0/1d/9ea01d1a050f773d5f43c0d9362def36.jpg",
     "title": "Netflix",
     "companyName": "Netflix Inc",
     "id": 6,
@@ -126,7 +126,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/512px-Amazon_logo.svg.png",
+    "image": "https://static.vecteezy.com/system/resources/previews/019/136/322/non_2x/amazon-logo-amazon-icon-free-free-vector.jpg",
     "title": "Amazon Shopping",
     "companyName": "Amazon Mobile LLC",
     "id": 8,
@@ -144,7 +144,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Uber_logo_2018.svg/512px-Uber_logo_2018.svg.png",
+    "image": "https://static.vecteezy.com/system/resources/thumbnails/027/127/501/small_2x/uber-logo-uber-icon-transparent-free-png.png",
     "title": "Uber",
     "companyName": "Uber Technologies",
     "id": 9,
@@ -252,7 +252,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Zoom_Communications_Logo.svg/512px-Zoom_Communications_Logo.svg.png",
+    "image": "https://images.seeklogo.com/logo-png/47/2/zoom-logo-png_seeklogo-479743.png",
     "title": "Zoom",
     "companyName": "Zoom Video Communications",
     "id": 15,
@@ -270,7 +270,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/en/thumb/9/98/Discord_logo.svg/512px-Discord_logo.svg.png",
+    "image": "https://images.seeklogo.com/logo-png/48/1/discord-logo-png_seeklogo-480527.png                                                                                                          ",
     "title": "Discord",
     "companyName": "Discord Inc",
     "id": 16,
@@ -342,7 +342,7 @@
     ]
   },
   {
-    "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:wght9GcQJhyOBkI9m73a63Ayf9uQFQdDrLA5aTSJahQ&s",
+    "image": "https://play-lh.googleusercontent.com/tw_coGKgk1K_zO-Ypf9zBKV1s-KT3dYN1MIUxIqtnbfmON5x_YmuoAr31gE4oSfJHNtA-aStTd-qe9R8S6NVyA",
     "title": "Duolingo",
     "companyName": "Duolingo",
     "id": 20,
