update app image url

--- a/public/appData.json
+++ b/public/appData.json
@@ -252,7 +252,7 @@
     ]
   },
   {
-    "image": "https://images.seeklogo.com/logo-png/47/2/zoom-logo-png_seeklogo-479743.png",
+    "image": "https://img.freepik.com/premium-vector/square-zoom-logo-isolated-white-background_469489-910.jpg?semt=ais_hybrid&w=740&q=80",
     "title": "Zoom",
     "companyName": "Zoom Video Communications",
     "id": 15,
@@ -270,7 +270,7 @@
     ]
   },
   {
-    "image": "https://images.seeklogo.com/logo-png/48/1/discord-logo-png_seeklogo-480527.png                                                                                                          ",
+    "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1FNkB4oJhsoKGhR9IdFLnTqmE8c0rxk-TyA&s",
     "title": "Discord",
     "companyName": "Discord Inc",
     "id": 16,
@@ -414,7 +414,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/PayPal.svg/512px-PayPal.svg.png",
+    "image": "https://images.icon-icons.com/2429/PNG/512/paypal_logo_icon_147252.png",
     "title": "PayPal",
     "companyName": "PayPal Mobile",
     "id": 24,
