update image url

--- a/public/appData.json
+++ b/public/appData.json
@@ -162,7 +162,7 @@
     ]
   },
   {
-    "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Snapchat_logo.svg/512px-Snapchat_logo.svg.png",
+    "image": "https://static.vecteezy.com/system/resources/previews/018/930/704/non_2x/snapchat-logo-snapchat-icon-transparent-free-png.png",
     "title": "Snapchat",
     "companyName": "Snap Inc",
     "id": 10,
